Added some german

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -668,14 +668,14 @@ previewfiles.description=Dateivorschau f\u00fcr diesen Folder
 previewfiles.key=V
 previewfiles.name=Vorschau
 
-##pro.http.options.directconnect=Direct connection to the internet
-##pro.http.options.host=Hostname
-##pro.http.options.httpproxy=HTTP-Proxy
-##pro.http.options.password=Password
-##pro.http.options.port=Port
-##pro.http.options.title=HTTP Connection settings
-##pro.http.options.username=Username
-##pro.http.options.withauth=With authorization
+pro.http.options.directconnect=Direkte Verbindung zum Internet
+pro.http.options.host=Hostname
+pro.http.options.httpproxy=HTTP-Proxy
+pro.http.options.password=Passwort
+pro.http.options.port=Port
+pro.http.options.title=HTTP Verbindungseinstellungen
+pro.http.options.username=Benutzername
+pro.http.options.withauth=Mit Anmeldung
 pro.security.autoacceptfriendkeys=Ersten \u00f6ffentlichen Schl\u00fcssel eines Freudes automatisch akzeptieren.
 pro.security.high=Hoch
 pro.security.high_info=Hoche Sicherheit (Standart)\:
@@ -729,11 +729,11 @@ quickinfo.user.isconnectedinet=ist im Internet
 quickinfo.user.isconnectedlan=ist im LAN
 quickinfo.user.isdiconnected=ist nicht verbunden
 quickinfo.user.secureconnected=Die Verbindung ist sicher
-##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
-##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
-##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
-##quickinfo.webservice.notsetup=Online Storage not configured yet
-##quickinfo.webservice.title=PowerFolder Online Storage
+quickinfo.webservice.connected=Verbunden mit dem Online Speicher
+quickinfo.webservice.foldersmirrored={0} von {1} Folder werden gesichert
+quickinfo.webservice.notconnected=Nicht mit dem Online Speicher verbunden
+quickinfo.webservice.notsetup=Online Speicher noch nicht eingerichtet
+quickinfo.webservice.title=PowerFolder Online Speicher
 
 reconnect.description=Baut eine neue Verbindung zu dem Benutzer auf
 reconnect.key=r
@@ -987,5 +987,5 @@ wizard.whattodo.bordertext=Bitte w\u00e4hlen Sie
 wizard.whattodo.filesharing=Filesharing
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
 wizard.whattodo.projectwork=Projekt Synchronisation
-##wizard.whattodo.syncpcs=Mirror
+wizard.whattodo.syncpcs=Spiegeln
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
