--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=Entfernt die heruntergeladenen und vollst\u0
 cleardompleteddownloads.key=c
 cleardompleteddownloads.name=Aufr\u00e4umen
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=Manuelle Verbindung zu einem Powerfolder Benutzer
 connect.dialog.text=Bitte geben Sie den Namen des Hosts oder die IP Adresse des Benutzers an, mit dem Sie verbunden werden m\u00f6chten.\n\nPowerFolder verbindet sich nach kurzer Zeit automatisch mit dem Netzwerk,\nbenutzen Sie diese Option wenn Sie sich manuell verbinden wollen.\n 
 connect.dialog.title=Manuelle Verbindung zu einem Powerfolder Benutzer
@@ -314,7 +318,6 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
 folderpanel.hometab.number_of_available_files_at_other_members=Verf\u00fcgbare Dateien bei anderen Mitgliedern
-folderpanel.hometab.number_of_deleted_files_in_folder=Anzahl der gel\u00f6schen Dateien
 folderpanel.hometab.number_of_local_files_in_folder=Anzahl der lokalen Datein 
 folderpanel.hometab.public_folder=\u00d6ffentlich
 folderpanel.hometab.secret_folder=Geheim
@@ -322,7 +325,6 @@ folderpanel.hometab.secret_folder=Geheim
 folderpanel.hometab.synchronisation_eta=Synchronisation fertig in
 folderpanel.hometab.synchronisation_percentage=Synchronisation
 folderpanel.hometab.title=Info
-folderpanel.hometab.total_number_of_files=Alle Dateien (lokal+gel\u00f6sch+verf\u00fcgbar)
 folderpanel.hometab.total_size=Gr\u00f6sse (Total)
 folderpanel.settingstab.add_a_pattern.example=beispiel/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Geben Sie ein Muster f\u00fcr den Ausschluss von Dateien an
@@ -413,6 +415,8 @@ general.synchonisation=Synchronisation
 general.syncprofile=Synchronisationsmodus
 general.time=%02d\:%02d\:%02d
 general.today=Heute
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=Benutzer
 general.visibility=Modus
@@ -513,13 +517,13 @@ navtree.onlinenodes=Verbundene Benutzer ({0})
 navtree.recyclebin_size=Papierkorb ({0})
 navtree.title=Navigation
 
-##networkstatisticspanel.connected_users=Connected Users
-##networkstatisticspanel.known_users=Known Users
+##networkstatisticspanel.connected_users=Connected users
+##networkstatisticspanel.known_users=Known users
 ##networkstatisticspanel.local_folder_count=Number of local folders (joined)
 ##networkstatisticspanel.local_folders_size=Total size of all local files
 ##networkstatisticspanel.number_of_local_files=Total number of local files
 ##networkstatisticspanel.number_of_public_files=Total number of available files 
-##networkstatisticspanel.online_users=Online Users
+##networkstatisticspanel.online_users=Online users
 ##networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 ##networkstatisticspanel.public_folders_size=Total size of all available files
 
@@ -703,6 +707,7 @@ publicfolders.size=Gr\u00f6\u00dfe
 quickinfo.download.active={0} aktive Download(s)
 quickinfo.download.completed={0} Download(s) k\u00fcrzlich fertiggestellt
 quickinfo.download.title=Download \u00dcbersicht
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder ist synchronisiert
 quickinfo.folder.is_synchronizing=Folder wird synchronisiert...
 quickinfo.folder.number_of_files_and_size={0} Dateien, {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=Alle Folder sind synchronisiert
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synchronisation aktiv...
 quickinfo.root.title=Willkommen bei PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} aktive Upload(s)
 quickinfo.upload.title=Upload \u00dcbersicht
 quickinfo.user.isconnectedinet=ist im Internet
@@ -980,7 +987,7 @@ wizard.syncpcspanel.selecttarget=Bitte w\u00e4hlen Sie nun das lokale Verzeichni
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
-##wizard.webservice.register=Register new Account
+##wizard.webservice.register=Register New Account
 ##wizard.webservice.username=Email
 wizard.whattodo.bordertext=Bitte w\u00e4hlen Sie
 wizard.whattodo.filesharing=Filesharing
