--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=Limpia la lista de descargas completadas
 cleardompleteddownloads.key=c
 cleardompleteddownloads.name=Limpiar
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=Conexi\u00f3n manual a un usuario de Powerfolder
 connect.dialog.text=Por favor teclee el nombre de servidor o la IP del usuario al que se quiere conectar.\n\nPowerFolder se conecta autom\u00e1ticamente a la red despu\u00e9s de un corto per\u00edodo de tiempo,\nuse esta opci\u00f3n si quiere conectarse manualmente a un usuario.\n
 connect.dialog.title=Conexi\u00f3n manual a un usuario de Powerfolder
@@ -314,7 +318,6 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=El Archivo ya existe
 folderpanel.hometab.local_folder_location=Ubicaci\u00f3n carpeta local
 folderpanel.hometab.local_size=Tama\u00f1o local
 folderpanel.hometab.number_of_available_files_at_other_members=N\u00famero de archivos disponibles con otros miembros
-folderpanel.hometab.number_of_deleted_files_in_folder=N\u00famero de archivos borrados en la carpeta
 folderpanel.hometab.number_of_local_files_in_folder=N\u00famero de archivos locales en la carpeta
 ##folderpanel.hometab.public_folder=Public
 ##folderpanel.hometab.secret_folder=Secret
@@ -322,7 +325,6 @@ folderpanel.hometab.number_of_local_files_in_folder=N\u00famero de archivos loca
 ##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Porcentaje de sincronizaci\u00f3n
 ##folderpanel.hometab.title=Home
-folderpanel.hometab.total_number_of_files=Numero total de archivos (locales+borrados+disponibles)
 folderpanel.hometab.total_size=Tama\u00f1o total
 folderpanel.settingstab.add_a_pattern.example=ejemplo/*.jpg
 ##folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
@@ -413,6 +415,8 @@ general.synchonisation=Sincronizaci\u00f3n
 general.syncprofile=Perfil de sincronizaci\u00f3n
 general.time=%02d\:%02d\:%02d
 general.today=hoy
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=Env\u00edos
 general.user=Usuario
 general.visibility=Visibilidad
@@ -703,6 +707,7 @@ publicfolders.size=Tama\u00f1o
 quickinfo.download.active={0} descarga(s) activa(s)
 quickinfo.download.completed={0} descarga(s) recientemente completada(s)
 quickinfo.download.title=Estado de las Descargas
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=La Carpeta esta en sincron\u00eda
 quickinfo.folder.is_synchronizing=La Carpeta se esta sincronizando...
 quickinfo.folder.number_of_files_and_size={0} Archivo(s), {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=Todas las Carpetas estan sincronizadas
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sincronizaci\u00f3n en progreso...
 quickinfo.root.title=Bienvenido a PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} subidas activas
 quickinfo.upload.title=Estado de las Subidas
 quickinfo.user.isconnectedinet=Esta en Internet
@@ -778,7 +785,7 @@ rootpanel.connected_users=Usuarios conectados
 rootpanel.friends=Amigos
 
 scanallfolders.description=Sincroniza todas las Carpetas
-##scanallfolders.key=a
+##scanallfolders.key=F
 scanallfolders.name=Sincronizar Carpetas
 
 scanfolder.description=Comprueba cambios en los archivos de todas las carpetas
@@ -980,7 +987,7 @@ wizard.syncpcspanel.selecttarget=Por favor, seleccione el direcctorio local
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
-##wizard.webservice.register=Register new Account
+##wizard.webservice.register=Register New Account
 ##wizard.webservice.username=Email
 wizard.whattodo.bordertext=Elija su acci\u00f3n
 wizard.whattodo.filesharing=Compartir archivos
