--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=Nettoyer la liste des fichiers compl\u00e8te
 cleardompleteddownloads.key=N
 cleardompleteddownloads.name=Nettoyage
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=Se connecter \u00e0 un utilisateur de Powerfolder
 connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00e9seau apr\u00e8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00e0 un autre utilisateur.\n 
 connect.dialog.title=Se connecter \u00e0 un utilisateur de PowerFolder
@@ -314,7 +318,6 @@ folderpanel.hometab.folder_not_empty.text=Le dossier {0}\ndoit \u00c3\u00aatre v
 folderpanel.hometab.local_folder_location=Emplacement du dossier local
 folderpanel.hometab.local_size=Taille locale
 folderpanel.hometab.number_of_available_files_at_other_members=Nombre de fichiers disponibles chez les membres connect\u00e9s
-folderpanel.hometab.number_of_deleted_files_in_folder=Nombre de fichiers effac\u00e9s dans le dossier
 folderpanel.hometab.number_of_local_files_in_folder=Nombre de fichiers locaux dans le dossier
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Priv\u00e9
@@ -322,7 +325,6 @@ folderpanel.hometab.sub_folder_move.text=Le dossier {0}\nne peut pas \u00c3\u00a
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Pourcentage de synchronisation
 folderpanel.hometab.title=Accueil
-folderpanel.hometab.total_number_of_files=Nombre total de fichiers (locaux+effac\u00e9s+disponibles)
 folderpanel.hometab.total_size=Taille totale
 folderpanel.settingstab.add_a_pattern.example=exemple/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Indiquer un format de fichier \u00e0 exclure de la syncrhonisation
@@ -413,6 +415,8 @@ general.synchonisation=Synchronisation
 general.syncprofile=Profil de synchronisation
 general.time=%02d\:%02d\:%02d
 general.today=Aujourd'hui
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=Emission
 general.user=Utilisateur
 general.visibility=Visibilit\u00e9
@@ -703,6 +707,7 @@ publicfolders.size=Taille
 quickinfo.download.active={0} t\u00e9l\u00e9chargement(s) actif(s)
 quickinfo.download.completed={0} t\u00e9l\u00e9chargement(s) r\u00e9cemment termin\u00e9(s)
 quickinfo.download.title=Etat du t\u00e9l\u00e9chargement
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=Dossier en cours de synchronisation
 quickinfo.folder.is_synchronizing=Ce dossier est en cours de synchronisation...
 quickinfo.folder.number_of_files_and_size={0} fichier(s), {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=Tous les dossiers sont synchronis\u00e9s
 quickinfo.root.offline=D\u00e9connect\u00e9
 quickinfo.root.syncing=Synchronisation en cours...
 quickinfo.root.title=Bienvenue \u00e0 PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} \u00e9mission(s) en cours
 quickinfo.upload.title=Etat des \u00e9missions
 quickinfo.user.isconnectedinet=Est sur Internet
