--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=Pulisci la lista dai download recenti comple
 cleardompleteddownloads.key=P
 cleardompleteddownloads.name=Pulisci
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=Connessione manuale ad un utente Powerfolder
 connect.dialog.text=Inserisci un hostname o l'ip dell'utente con cui vuoi connetterti.\n\nPowerFolder automaticamente si connetter\u00e0 alla rete dopo poco tempo,\nusa questa opzione se vuoi connetterti manualmente ad un utente.\n 
 connect.dialog.title=Connessione manuale ad un utente Powerfolder
@@ -314,7 +318,6 @@ folderpanel.hometab.confirm_local_folder_move.title=Sposta la cartella locale
 folderpanel.hometab.local_folder_location=Percorso della cartella locale
 folderpanel.hometab.local_size=Dimensione locale
 folderpanel.hometab.number_of_available_files_at_other_members=Numero di file disponibili per gli altri membri
-folderpanel.hometab.number_of_deleted_files_in_folder=Numero di file cancellati nella cartella
 folderpanel.hometab.number_of_local_files_in_folder=Numero di file locali nella cartella
 folderpanel.hometab.public_folder=Pubblico
 folderpanel.hometab.secret_folder=Segreta
@@ -322,7 +325,6 @@ folderpanel.hometab.sub_folder_move.text=La cartella {0}\nnon pu\u00f2 essere sp
 folderpanel.hometab.synchronisation_eta=Sincronizzazione ETA
 folderpanel.hometab.synchronisation_percentage=Percentuale di sincronizzazione
 folderpanel.hometab.title=Home
-folderpanel.hometab.total_number_of_files=Numero totale di file (locali+cancellati+disponibili)
 folderpanel.hometab.total_size=Dimensione totale
 folderpanel.settingstab.add_a_pattern.example=esempio/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Inserisci un Pattern per escludere i files dalla sincronizzazione
@@ -413,6 +415,8 @@ general.synchonisation=Sincronizzazione
 general.syncprofile=Profilo di sincronizzazione
 general.time=%02d\:%02d\:%02d
 general.today=oggi
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=Utente
 general.visibility=Visibilit\u00e0
@@ -703,6 +707,7 @@ publicfolders.size=Dimensione
 quickinfo.download.active={0} download(s) attivi
 quickinfo.download.completed={0} download(s) recentemente completati
 quickinfo.download.title=Stato Download 
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=La cartella \u00e8 in fase di sincronizzazione
 quickinfo.folder.is_synchronizing=La cartella \u00e8 in fase di sincronizzazione...
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=Tutte le cartelle sono sincronizzate
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sincronizzazione in corso...
 quickinfo.root.title=Benvenuto in PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} upload(s) attivo
 quickinfo.upload.title=Stato Upload 
 quickinfo.user.isconnectedinet=\u00c8 in Internet
