--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=Verwijdert de downloads die klaar zijn uit d
 cleardompleteddownloads.key=R
 cleardompleteddownloads.name=Ruim op
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=Maak verbinding met een Powerfolder gebruiker
 connect.dialog.text=Vul de hostname of ip adres in van de gebruiker waarmee u wilt verbinden.\n\nPowerFolder zal automatisch met het netwerk verbinden na een korte tijd,\ngebruik deze optie om met een gebruiker te verbinden.\n 
 connect.dialog.title=Maak verbinding met een Powerfolder gebruiker
@@ -314,7 +318,6 @@ folderpanel.hometab.folder_not_empty.text=Folder {0}\nmoet leeg zijn.
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
 folderpanel.hometab.number_of_available_files_at_other_members=Aantal beschikbare bestanden bij andere leden
-folderpanel.hometab.number_of_deleted_files_in_folder=Aantal verwijderde bestanden in Folder
 folderpanel.hometab.number_of_local_files_in_folder=Aantal lokale bestanden in Folder
 folderpanel.hometab.public_folder=Publiek
 folderpanel.hometab.secret_folder=Geheim
@@ -322,7 +325,6 @@ folderpanel.hometab.sub_folder_move.text=Folder {0}\nkan niet verplaatst worden 
 folderpanel.hometab.synchronisation_eta=Synchronizatie nog
 folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
-folderpanel.hometab.total_number_of_files=Totaal aantal bestanden (lokaal+verwijderd+beschikbaar)
 folderpanel.hometab.total_size=Totale omvang
 folderpanel.settingstab.add_a_pattern.example=voorbeeld/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Geef een patroon in om bestanden uit te zonderen van synchronizatie
@@ -413,6 +415,8 @@ general.synchonisation=Synchronisatie
 general.syncprofile=Sync profiel
 general.time=%02d\:%02d\:%02d
 general.today=gisteren
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=User
 general.visibility=Toegankelijkheid
@@ -703,6 +707,7 @@ publicfolders.size=Grootte
 quickinfo.download.active={0} actieve download(s)
 quickinfo.download.completed={0} download(s) recent voltooid
 quickinfo.download.title=Download status
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is gesynchronizeerd
 quickinfo.folder.is_synchronizing=Folder is aan het synchronizeren...
 quickinfo.folder.number_of_files_and_size={0} Bestand(en), {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=Alle Folders zijn gesynchroniseerd
 quickinfo.root.offline=Niet verbonden
 quickinfo.root.syncing=Bezig met synchroniseren...
 quickinfo.root.title=Welkom by PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} actieve upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is op het Internet
