--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=\u0421\u0442\u0438\u0440\u0430\u0435\u0442 \
 cleardompleteddownloads.key=c
 cleardompleteddownloads.name=\u0423\u0431\u0440\u0430\u0442\u044c\u0441\u044f
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=\u0420\u0443\u0447\u043d\u043e\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044e Powerfolder
 connect.dialog.text=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f \u0445\u043e\u0441\u0442\u0430 \u0438\u043b\u0438 IP \u0430\u0434\u0440\u0435\u0441 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f, \u0441 \u043a\u043e\u0442\u043e\u0440\u044b\u043c \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u0431\u044b\u0442\u044c \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u044b.\n\nPowerFolder \u0441\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c\u0441\u044f \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u0441 \u0441\u0435\u0442\u044c\u044e,\n\u0438\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0439\u0442\u0435 \u044d\u0442\u043e \u043e\u043f\u0446\u0438\u044e \u0435\u0441\u043b\u0438 \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c\u0441\u044f \u0432 \u0440\u0443\u0447\u043d\u0443\u044e.\n
 connect.dialog.title=\u0420\u0443\u0447\u043d\u043e\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044e Powerfolder
@@ -314,7 +318,6 @@ folderpanel.hometab.folder_not_empty.text=\u041f\u0430\u043f\u043a\u0430 {0}\n\u
 folderpanel.hometab.local_folder_location=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0435 \u043c\u0435\u0441\u0442\u043e\u043d\u0430\u0445\u043e\u0436\u0434\u0435\u043d\u0438\u0435 \u041f\u0430\u043f\u043a\u0438
 folderpanel.hometab.local_size=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
 folderpanel.hometab.number_of_available_files_at_other_members=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0434\u043e\u0441\u0442\u0443\u043f\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432 \u0443 \u0434\u0440\u0443\u0433\u0438\u0445 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439
-folderpanel.hometab.number_of_deleted_files_in_folder=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0441\u0442\u0435\u0440\u0442\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432 \u0432 \u041f\u0430\u043f\u043a\u0435
 folderpanel.hometab.number_of_local_files_in_folder=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432 \u0432 \u041f\u0430\u043f\u043a\u0435
 folderpanel.hometab.public_folder=\u041e\u0442\u043a\u0440\u044b\u0442\u043e
 folderpanel.hometab.secret_folder=\u0421\u0435\u043a\u0440\u0435\u0442\u043d\u043e
@@ -322,7 +325,6 @@ folderpanel.hometab.sub_folder_move.text=\u041f\u0430\u043f\u043a\u0430 {0}\n\u0
 folderpanel.hometab.synchronisation_eta=\u0412\u0440\u0435\u043c\u044f \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 folderpanel.hometab.synchronisation_percentage=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 folderpanel.hometab.title=\u0421\u0442\u0430\u0440\u0442
-folderpanel.hometab.total_number_of_files=\u0412\u0441\u0435\u0433\u043e \u0444\u0430\u0439\u043b\u043e\u0432 (\u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e+\u0441\u0442\u0435\u0440\u0442\u043e+\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u043e)
 folderpanel.hometab.total_size=\u041e\u0431\u0448\u0438\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
 folderpanel.settingstab.add_a_pattern.example=\u043f\u0440\u0438\u043c\u0435\u0440/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f \u0434\u043b\u044f \u0438\u0441\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u044f \u0444\u0430\u0439\u043b\u043e\u0432 \u0438\u0437 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438
@@ -413,6 +415,8 @@ general.synchonisation=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0
 general.syncprofile=\u0420\u0435\u0436\u0438\u043c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 general.time=%02d\:%02d\:%02d
 general.today=\u0441\u0435\u0433\u043e\u0434\u043d\u044f
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=\u0417\u0430\u0433\u0440\u0443\u0437\u043a\u0438
 general.user=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c
 general.visibility=\u0420\u0435\u0436\u0438\u043c
@@ -703,6 +707,7 @@ publicfolders.size=\u0420\u0430\u0437\u043c\u0435\u0440
 quickinfo.download.active={0} \u0430\u043a\u0442\u0438\u0432\u043d\u044b\u0445 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0439
 quickinfo.download.completed={0} \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0439 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 quickinfo.download.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0439
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=\u041f\u0430\u043f\u043a\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u043d\u0430
 quickinfo.folder.is_synchronizing=\u041f\u0430\u043f\u043a\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f...
 quickinfo.folder.number_of_files_and_size={0} \u0424\u0430\u0439\u043b(\u043e\u0432), {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=\u0412\u0441\u0435 \u041f\u0430\u043f\u043a\u0438 \u0441\u
 quickinfo.root.offline=\u041d\u0435 \u0432 \u0441\u0435\u0442\u0438
 quickinfo.root.syncing=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044f \u0432\u044b\u043f\u043e\u043b\u043d\u044f\u0442\u0441\u044f...
 quickinfo.root.title=\u0414\u043e\u0431\u0440\u043e \u041f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432 PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} \u0430\u043a\u0442\u0438\u0432\u043d\u044b\u0445 \u0437\u0430\u0433\u0440\u0443\u0437\u043e\u043a
 quickinfo.upload.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u0437\u0430\u0433\u0440\u0443\u0437\u043e\u043a
 quickinfo.user.isconnectedinet=\u0412 \u0441\u0435\u0442\u0438 Internet
