--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=Rensar listan fr\u00e5n nyligen klara nedlad
 cleardompleteddownloads.key=R
 cleardompleteddownloads.name=Rensa
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=Manuell anslutning till en PowerFolder anv\u00e4ndare
 connect.dialog.text=Ange hostname eller IP f\u00f6r anv\u00e4ndaren du vill ansluta till.\n\nPowerFolder ansluter automatiskt tilln\u00e4tverket efter en liten stund,\n anv\u00e4nd detta val om du vill ansluta manuellt till en anv\u00e4ndare.\n 
 connect.dialog.title=Manuell anslutning till en PowerFolder anv\u00e4ndare
@@ -314,7 +318,6 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Filen finns redan
 folderpanel.hometab.local_folder_location=Lokal folder plats
 folderpanel.hometab.local_size=Lokal storlek
 folderpanel.hometab.number_of_available_files_at_other_members=Antal tillg\u00e4ngliga filer hos andra medlemmar
-folderpanel.hometab.number_of_deleted_files_in_folder=Antal borttagna filer i foldern
 folderpanel.hometab.number_of_local_files_in_folder=Antal lokala filer i foldern
 folderpanel.hometab.public_folder=Offentlig
 folderpanel.hometab.secret_folder=Privat
@@ -322,7 +325,6 @@ folderpanel.hometab.secret_folder=Privat
 folderpanel.hometab.synchronisation_eta=Synkronisering klar om
 folderpanel.hometab.synchronisation_percentage=Synkroniserat i procent 
 folderpanel.hometab.title=Hem
-folderpanel.hometab.total_number_of_files=Total antal filer (lokala+borttagna+tillg\u00e4ngliga)
 folderpanel.hometab.total_size=Total storlek
 folderpanel.settingstab.add_a_pattern.example=exempel/*.jpg
 folderpanel.settingstab.add_a_pattern.text=L\u00e4gg till ett filnamnsm\u00f6nster f\u00f6r att undanta filer fr\u00e5n synkronisering
@@ -413,6 +415,8 @@ general.synchonisation=Synkronisering
 general.syncprofile=Synk profil
 general.time=%02d\:%02d\:%02d
 general.today=idag
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=Uppladdningar
 general.user=Anv\u00e4ndare
 general.visibility=Synlighet
@@ -703,6 +707,7 @@ publicfolders.size=Storlek
 quickinfo.download.active={0} aktiva nedladdningar
 quickinfo.download.completed={0} nedladdningar nyligen klara
 quickinfo.download.title=Nedladdningsstatus
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=Foldern \u00e4r synkroniserad
 quickinfo.folder.is_synchronizing=Foldern synkroniseras...
 quickinfo.folder.number_of_files_and_size={0} fil(er), {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=Alla foldrar \u00e4r synkroniserade
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synkroniserar...
 quickinfo.root.title=V\u00e4lkommen till PowerFolder\!
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} aktiva uppladdningar
 quickinfo.upload.title=Uppladdningsstatus
 quickinfo.user.isconnectedinet=\u00c4r p\u00e5 Internet
@@ -980,7 +987,7 @@ wizard.syncpcspanel.selecttarget=Var v\u00e4nlig ange lokal m\u00e5l-mapp
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
-##wizard.webservice.register=Register new Account
+##wizard.webservice.register=Register New Account
 ##wizard.webservice.username=Email
 wizard.whattodo.bordertext=V\u00e4lj ett alternativ
 wizard.whattodo.filesharing=Dela Filer
