--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u
 cleardompleteddownloads.key=C
 cleardompleteddownloads.name=\u5b8c\u4e86\u306e\u6d88\u53bb(C)
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=PowerFolder \u30e6\u30fc\u30b6\u30fc\u3078\u306e\u624b\u52d5\u63a5\u7d9a
 connect.dialog.text=\u63a5\u7d9a\u3057\u305f\u3044\u30e6\u30fc\u30b6\u30fc\u306e\u30db\u30b9\u30c8\u540d\u307e\u305f\u306f IP \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n\nPowerFolder \u306f\u81ea\u52d5\u7684\u306b\u77ed\u6642\u9593\u3067\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u3078\u63a5\u7d9a\u3057\u307e\u3059\u304c\u3001\n\u30e6\u30fc\u30b6\u30fc\u306b\u624b\u52d5\u3067\u63a5\u7d9a\u3057\u305f\u3044\u5834\u5408\u306f\u3053\u306e\u30aa\u30d7\u30b7\u30e7\u30f3\u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n 
 connect.dialog.title=PowerFolder \u30e6\u30fc\u30b6\u30fc\u3078\u306e\u624b\u52d5\u63a5\u7d9a
@@ -314,7 +318,6 @@ folderpanel.hometab.folder_not_empty.text={0} \u30d5\u30a9\u30eb\u30c0\n\u306f\u
 folderpanel.hometab.local_folder_location=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306e\u5834\u6240
 folderpanel.hometab.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
 folderpanel.hometab.number_of_available_files_at_other_members=\u4ed6\u30e1\u30f3\u30d0\u30fc\u304b\u3089\u53d6\u5f97\u53ef\u80fd\u306a\u30d5\u30a1\u30a4\u30eb\u6570
-folderpanel.hometab.number_of_deleted_files_in_folder=\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u524a\u9664\u6e08\u307f\u30d5\u30a1\u30a4\u30eb\u6570
 folderpanel.hometab.number_of_local_files_in_folder=\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30ed\u30fc\u30ab\u30eb\u30d5\u30a1\u30a4\u30eb\u6570
 folderpanel.hometab.public_folder=\u30d1\u30d6\u30ea\u30c3\u30af
 folderpanel.hometab.secret_folder=\u30b7\u30fc\u30af\u30ec\u30c3\u30c8
@@ -322,7 +325,6 @@ folderpanel.hometab.sub_folder_move.text={0} \u30d5\u30a9\u30eb\u30c0\u3092\n{1}
 folderpanel.hometab.synchronisation_eta=\u540c\u671f\u63a8\u5b9a\u6240\u8981\u6642\u9593
 folderpanel.hometab.synchronisation_percentage=\u540c\u671f\u5272\u5408
 folderpanel.hometab.title=\u30db\u30fc\u30e0
-folderpanel.hometab.total_number_of_files=\u5408\u8a08\u30d5\u30a1\u30a4\u30eb\u6570\uff08\u30ed\u30fc\u30ab\u30eb\uff0b\u524a\u9664\u6e08\uff0b\u53d6\u5f97\u53ef\uff09
 folderpanel.hometab.total_size=\u5408\u8a08\u30b5\u30a4\u30ba
 folderpanel.settingstab.add_a_pattern.example=\u5165\u529b\u4f8b/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u5165\u529b
@@ -413,6 +415,8 @@ general.synchonisation=\u540c\u671f\u65b9\u5f0f
 general.syncprofile=\u540c\u671f\u65b9\u5f0f
 general.time=%02d\:%02d\:%02d
 general.today=\u4eca\u65e5
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 general.user=\u30e6\u30fc\u30b6\u30fc
 general.visibility=\u53ef\u8996\u6027
@@ -703,6 +707,7 @@ publicfolders.size=\u30b5\u30a4\u30ba
 quickinfo.download.active=\u51e6\u7406\u4e2d\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 {0}
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 {0}
 quickinfo.download.title=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u306e\u72b6\u614b
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
 quickinfo.folder.is_synchronizing=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u4e2d...
 quickinfo.folder.number_of_files_and_size={0} \u30d5\u30a1\u30a4\u30eb\u3001 {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=\u5168\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
 quickinfo.root.offline=\u30aa\u30d5\u30e9\u30a4\u30f3
 quickinfo.root.syncing=\u540c\u671f\u9032\u884c\u4e2d...
 quickinfo.root.title=PowerFolder \u306b\u3088\u3046\u3053\u305d\uff01
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active=\u51e6\u7406\u4e2d\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9 {0}
 quickinfo.upload.title=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u306e\u72b6\u614b
 quickinfo.user.isconnectedinet=\u306f\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u4e0a\u3067\u3059
