--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -92,6 +92,10 @@ cleardompleteddownloads.description=\u4ece\u5217\u8868\u4e2d\u6e05\u9664\u6700\u
 cleardompleteddownloads.key=c
 cleardompleteddownloads.name=\u6d88\u9664
 
+##clearrecentdownloads.description=Clears the list of the recent problems
+##clearrecentdownloads.key=c
+##clearrecentdownloads.name=Cleanup
+
 connect.description=\u624b\u52a8\u8fde\u63a5\u5230 Powerfolder \u7528\u6237
 connect.dialog.text=\u8bf7\u8f93\u5165\u4f60\u60f3\u8fde\u63a5\u7684\u4e3b\u673a\u540d\u6216IP\n\nPowerFolder\u5c06\u5728\u7a0d\u540e\u81ea\u52a8\u8fde\u63a5\uff0c\n\u5982\u679c\u4f60\u60f3\u624b\u52a8\u8fde\u63a5\u8bf7\u4f7f\u7528\u8be5\u9009\u9879\u3002\n 
 connect.dialog.title=\u624b\u52a8\u8fde\u63a5\u5230 Powerfolder \u7528\u6237
@@ -314,7 +318,6 @@ folderpanel.hometab.folder_not_empty.text=\u6587\u4ef6\u5939 {0}\n\u5fc5\u987b\u
 folderpanel.hometab.local_folder_location=\u672c\u5730\u6587\u4ef6\u5939\u4f4d\u7f6e
 folderpanel.hometab.local_size=\u672c\u5730\u5927\u5c0f
 folderpanel.hometab.number_of_available_files_at_other_members=\u5176\u4ed6\u7528\u6237\u5904\u7684\u6709\u6548\u6587\u4ef6\u6570
-folderpanel.hometab.number_of_deleted_files_in_folder=\u6587\u4ef6\u5939\u5df2\u5220\u9664\u6587\u4ef6\u6570
 folderpanel.hometab.number_of_local_files_in_folder=\u6587\u4ef6\u5939\u7684\u672c\u5730\u6587\u4ef6\u6570
 folderpanel.hometab.public_folder=\u516c\u5171
 folderpanel.hometab.secret_folder=\u79c1\u6709
@@ -322,7 +325,6 @@ folderpanel.hometab.sub_folder_move.text=\u6587\u4ef6\u5939 {0}\n\u4e0d\u80fd\u7
 folderpanel.hometab.synchronisation_eta=\u540c\u6b65 ETA
 folderpanel.hometab.synchronisation_percentage=\u540c\u6b65\u7387
 folderpanel.hometab.title=\u5e38\u89c4
-folderpanel.hometab.total_number_of_files=\u6587\u4ef6\u603b\u6570\uff08\u672c\u5730+\u5df2\u5220\u9664+\u6709\u6548\uff09
 folderpanel.hometab.total_size=\u603b\u5927\u5c0f
 folderpanel.settingstab.add_a_pattern.example=\u793a\u4f8b/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u8f93\u5165\u6837\u5f0f\u6765\u5ffd\u7565\u4e0d\u8fdb\u884c\u540c\u6b65\u7684\u6587\u4ef6
@@ -413,6 +415,8 @@ general.synchonisation=\u540c\u6b65
 general.syncprofile=\u540c\u6b65\u9009\u9879
 general.time=%02d\:%02d\:%02d
 general.today=\u4eca\u5929
+##general.transfer.problem=Transfer Problem
+##general.transfer.problems=Transfer Problems
 general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.visibility=\u516c\u5f00\u7a0b\u5ea6
@@ -703,6 +707,7 @@ publicfolders.size=\u5927\u5c0f
 quickinfo.download.active={0} \u4e2a\u6d3b\u8dc3\u4e0b\u8f7d
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0b\u8f7d
 quickinfo.download.title=\u4e0b\u8f7d\u72b6\u6001
+##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65
 quickinfo.folder.is_synchronizing=\u6b63\u5728\u540c\u6b65\u6587\u4ef6\u5939\u2026\u2026
 quickinfo.folder.number_of_files_and_size={0} \u6587\u4ef6\uff0c {1}
@@ -722,6 +727,8 @@ quickinfo.root.insync=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
 quickinfo.root.offline=\u79bb\u7ebf
 quickinfo.root.syncing=\u6b63\u5728\u540c\u6b65\u2026\u2026
 quickinfo.root.title=\u6b22\u8fce\u4f7f\u7528PowerFolder\uff01
+##quickinfo.transfer.problems.detected={0} problem(s) recently detected
+##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} \u4e2a\u6d3b\u8dc3\u4e0a\u4f20
 quickinfo.upload.title=\u4e0a\u4f20\u72b6\u6001
 quickinfo.user.isconnectedinet=\u4e92\u8054\u7f51
